--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -20,4 +20,29 @@
 	    <servlet-name>Logout</servlet-name>
 	    <url-pattern>/logout</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+   		<servlet-name>LoggedIn</servlet-name>
+    	<servlet-class>com.sdzee.servlets.LoggedIn</servlet-class>
+    	<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+	    <servlet-name>LoggedIn</servlet-name>
+	    <url-pattern>/loggedin</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+   		<servlet-name>Delete</servlet-name>
+    	<servlet-class>com.sdzee.servlets.Delete</servlet-class>
+    	<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+	    <servlet-name>Delete</servlet-name>
+	    <url-pattern>/delete</url-pattern>
+	</servlet-mapping>
+	
+	<error-page>
+	    <error-code>404</error-code>
+	    <location>/error</location>
+	</error-page>
 </web-app>
